# rag

./: .gitignore  README.md  pyproject.toml
app/: __init__.py  main.py  settings.py
app/adapters/: __init__.py  dashscope.py  dashscope_reranker.py  deepseek.py  in_memory.py  local.py  milvus.py  mysql.py  opensearch.py
app/domain/: __init__.py  models.py
app/evaluation/: __init__.py  retrieval.py
app/parsers/: __init__.py  text.py
app/ports/: __init__.py  contracts.py
app/prompts/: __init__.py  qa.py
app/static/: index.html
app/workflows/: __init__.py  indexing.py  qa.py
tests/: fakes.py  test_api.py  test_dashscope_adapter.py  test_dashscope_reranker.py  test_document_parsers.py  test_milvus_adapter.py  test_opensearch_adapter.py  test_prompts.py  test_rag_workflows.py  test_retrieval_eval.py
