[project]
name = "enterprise-rag"
version = "0.1.0"
description = "Enterprise knowledge-base RAG scaffold with LangGraph orchestration."
requires-python = ">=3.11"
dependencies = [
    "aiomysql",
    "fastapi",
    "greenlet",
    "httpx",
    "uvicorn[standard]",
    "langgraph",
    "langchain-core",
    "langchain-deepseek",
    "openai",
    "opensearch-py",
    "pydantic",
    "pydantic-settings",
    "pymupdf",
    "pymilvus",
    "python-multipart",
    "python-docx",
    "SQLAlchemy>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]
prod-connectors = [
    "psycopg[binary]",
    "redis",
    "celery",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
